# django-twitterclone

./: Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
authentication/: forms.py  urls.py  views.py
authentication/templates/: LoginPage.html  generic_form.html  register.html
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/: notifications.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py
tweet/templates/: generic_form.html  tweet.html  tweet_detail.html
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200621_1853.py  0003_auto_20200622_1754.py
twitteruser/static/css/: twitter.css
twitteruser/templates/: base.html  index.html  landing.html  search.html  userpage.html
