[tool.poetry]
name = "django-twitterclone"
version = "0.1.0"
description = ""
authors = ["Darveloper <darveloper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.9"
django-icons = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
